[package]
name = "nodetool-sdk"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inner = "0.1.1"
smol_str = "0.1.23"
thiserror = "1.0.32"

wasm-bindgen = { version = "0.2.82", optional = true, features = [
  "serde-serialize",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.142", optional = true, features = ["derive"] }
lazy_static = "1.4.0"

[dev-dependencies]
anyhow = "1.0.59"

[features]
serde = ["dep:serde"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "wee_alloc", "serde"]
