[package]
name = "nodetool-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodetool-sdk-core = { path = "../nodetool-sdk-core" }
nodetool-sdk-nodes = { path = "../nodetool-sdk-nodes", optional = true }
nodetool-sdk-macros = { path = "../nodetool-sdk-macros", optional = true }

[features]
default = ["nodetool-sdk-nodes"]
nodes = ["nodetool-sdk-nodes"]
macros = ["nodetool-sdk-macros"]